--- a/src/home.html
+++ b/src/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="ru">
-    @@include('html/_head.htm',{ "title":"Главная" })
+<html lang="en">
+    @@include('html/_head.htm',{ "title":"MartaUP" })
 
     <body>
         <div class="wrapper">
@@ -12,75 +12,55 @@
                             <div class="home__slider swiper">
                                 <div class="home__wrapper swiper-wrapper">
                                     <div class="home__slide swiper-slide slide-home">
-                                        <div class="slide-home__column">
-                                            <div class="slide-home__info">
-                                                <h1 class="slide-home__title">We Build Apps & Websites for Your Business</h1>
-                                                <div class="slide-home__subtitle">For startups, For businesses & For you</div>
-                                                <a href="#" class="slide-home__btn btn">Request a quote</a>
-                                            </div>
+                                        <div class="slide-home__info">
+                                            <h1 class="slide-home__title">We Build Apps & Websites for Your Business</h1>
+                                            <div class="slide-home__subtitle">For startups, For businesses & For you</div>
+                                            <a href="#" class="slide-home__btn btn">Request a quote</a>
                                         </div>
-                                        <div class="slide-home__column">
+                                        <div class="slide-home__image">
+                                            <img src="@img/home/01.svg" alt="01" />
+                                        </div>
+                                    </div>
+                                    <div class="home__slide swiper-slide slide-home">
+                                        <div class="slide-home__info">
+                                            <h2 class="slide-home__title">We Build Apps & COOLO for Your Business</h2>
+                                            <div class="slide-home__subtitle">For startups, For businesses & For you</div>
+                                            <a href="#" class="slide-home__btn btn">Request a quote</a>
+                                        </div>
+                                        <div class="slide-home__image">
+                                            <img src="@img/home/02.svg" alt="02" />
+                                        </div>
+                                    </div>
+                                    <div class="home__slide swiper-slide slide-home">
+                                        <div class="home__slide slide-home">
+                                            <div class="slide-home__info">
+                                                <h2 class="slide-home__title">We Build Apps & Websites for Your Business</h2>
+                                                <div class="slide-home__subtitle">For startups, For businesses & For you</div>
+                                            </div>
                                             <div class="slide-home__image">
                                                 <img src="@img/home/01.svg" alt="01" />
                                             </div>
                                         </div>
                                     </div>
                                     <div class="home__slide swiper-slide slide-home">
-                                        <div class="slide-home__column">
+                                        <div class="home__slide slide-home">
                                             <div class="slide-home__info">
                                                 <h2 class="slide-home__title">We Build Apps & COOLO for Your Business</h2>
-                                                <div class="slide-home__subtitle">For startups, For businesses & For you</div>
                                                 <a href="#" class="slide-home__btn btn">Request a quote</a>
                                             </div>
-                                        </div>
-                                        <div class="slide-home__column">
                                             <div class="slide-home__image">
                                                 <img src="@img/home/02.svg" alt="02" />
                                             </div>
                                         </div>
                                     </div>
                                     <div class="home__slide swiper-slide slide-home">
-                                        <div class="home__slide slide-home">
-                                            <div class="slide-home__column">
-                                                <div class="slide-home__info">
-                                                    <h2 class="slide-home__title">We Build Apps & Websites for Your Business</h2>
-                                                    <div class="slide-home__subtitle">For startups, For businesses & For you</div>
-                                                </div>
-                                            </div>
-                                            <div class="slide-home__column">
-                                                <div class="slide-home__image">
-                                                    <img src="@img/home/01.svg" alt="01" />
-                                                </div>
-                                            </div>
+                                        <div class="slide-home__info">
+                                            <h2 class="slide-home__title">We Build Apps & COOLO for Your Business</h2>
+                                            <div class="slide-home__subtitle">For startups, For businesses & For you</div>
+                                            <a href="#" class="slide-home__btn btn">Request a quote</a>
                                         </div>
-                                    </div>
-                                    <div class="home__slide swiper-slide slide-home">
-                                        <div class="home__slide slide-home">
-                                            <div class="slide-home__column">
-                                                <div class="slide-home__info">
-                                                    <h2 class="slide-home__title">We Build Apps & COOLO for Your Business</h2>
-                                                    <a href="#" class="slide-home__btn btn">Request a quote</a>
-                                                </div>
-                                            </div>
-                                            <div class="slide-home__column">
-                                                <div class="slide-home__image">
-                                                    <img src="@img/home/02.svg" alt="02" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="home__slide swiper-slide slide-home">
-                                        <div class="slide-home__column">
-                                            <div class="slide-home__info">
-                                                <h2 class="slide-home__title">We Build Apps & COOLO for Your Business</h2>
-                                                <div class="slide-home__subtitle">For startups, For businesses & For you</div>
-                                                <a href="#" class="slide-home__btn btn">Request a quote</a>
-                                            </div>
-                                        </div>
-                                        <div class="slide-home__column">
-                                            <div class="slide-home__image">
-                                                <img src="@img/home/03.svg" alt="03" />
-                                            </div>
+                                        <div class="slide-home__image">
+                                            <img src="@img/home/03.svg" alt="03" />
                                         </div>
                                     </div>
                                 </div>
@@ -95,113 +75,96 @@
 
                 <section class="page__special special">
                     <div class="special__container">
-                        <div class="special__title title">We are specialised in</div>
+                        <h2 class="special__title title">We are specialised in</h2>
                         <div class="special__content">
                             <div class="special__column column-special">
                                 <div class="column-special__body">
                                     <div class="column-special__image">
-                                        <img src="@img/special/01.svg" alt="" />
+                                        <img src="@img/special/01.svg" alt="01" />
                                     </div>
-                                    <div class="column-special__title">UI/UX Design</div>
-                                    <div class="column-special__text">
+                                    <h3 class="column-special__title">UI/UX Design</h3>
+                                    <p class="column-special__text">
                                         In hac habitasse platea dictumstmus adipiscing fermentum quam volutpat aliquam. Integer
                                         cilisis tristique.
-                                    </div>
+                                    </p>
                                 </div>
                             </div>
                             <div class="special__column column-special">
                                 <div class="column-special__body">
                                     <div class="column-special__image">
-                                        <img src="@img/special/02.svg" alt="" />
+                                        <img src="@img/special/02.svg" alt="02" />
                                     </div>
-                                    <div class="column-special__title">Web Development</div>
-                                    <div class="column-special__text">
+                                    <h3 class="column-special__title">Web Development</h3>
+                                    <p class="column-special__text">
                                         In hac habitasse platea dictumstmus adipiscing fermentum quam volutpat aliquam.
-                                    </div>
+                                    </p>
                                 </div>
                             </div>
                             <div class="special__column column-special">
                                 <div class="column-special__body">
                                     <div class="column-special__image">
-                                        <img src="@img/special/03.svg" alt="" />
+                                        <img src="@img/special/03.svg" alt="03" />
                                     </div>
-                                    <div class="column-special__title">App Development</div>
-                                    <div class="column-special__text">
+                                    <h3 class="column-special__title">App Development</h3>
+                                    <p class="column-special__text">
                                         In hac fggv aookf habitasse platea dictumstmus adipiscing fermentum quam volutpat aliquam.
                                         Integer cilisis tristique.
-                                    </div>
+                                    </p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </section>
+
                 <section class="page__content content">
                     <div class="content__container">
-                        <div class="content__row">
-                            <div class="content__column">
-                                <div class="content__info">
-                                    <div class="content__title title">Experienced Designers & Developers</div>
-                                    <div class="content__text">
-                                        <p>
-                                            Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum
-                                            rutrum, neque sem pretium metus, quis mollis nisl nunc et massa.
-                                        </p>
-                                        <p>Vestibulum sed metus in lorem tristique ullamcorper id vitae erat.</p>
-                                    </div>
-                                </div>
+                        <div class="content__row content__row_1">
+                            <div class="content__info">
+                                <h3 class="content__title title">Experienced Designers & Developers</h3>
+                                <p class="content__text">
+                                    Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum,
+                                    neque sem pretium metus, quis mollis nisl nunc et massa.
+                                </p>
+                                <p class="content__text">Vestibulum sed metus in lorem tristique ullamcorper id vitae erat.</p>
                             </div>
-                            <div class="content__column">
-                                <div class="content__image">
-                                    <img src="@img/content/01.svg" alt="" />
-                                </div>
+                            <div class="content__image">
+                                <img src="@img/content/01.svg" alt="01" />
                             </div>
                         </div>
-                        <div class="content__row content__row_sec">
-                            <div class="content__column">
-                                <div class="content__info">
-                                    <div class="content__title title">Information Architect & Visual Prototyping</div>
-                                    <div class="content__text">
-                                        <p>
-                                            Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum
-                                            rutrum, neque sem pretium metus, quis mollis nisl nunc et massa.
-                                        </p>
-                                        <p>
-                                            Vestibulum sed metus in lorem tristique ullamcorper id vitae erat. Nulla mollis sapien
-                                            sollicitudin lacinia lacinia. Nam dapibus nisl vitae elit fringilla rutrum. Aenean
-                                            sollicitudin, erat a elementum rutrum, neque sem pretium metus, quis mollis nisl nunc
-                                            et massa
-                                        </p>
-                                    </div>
-                                </div>
+                        <div class="content__row content__row_2">
+                            <div class="content__info">
+                                <h3 class="content__title title">Information Architect & Visual Prototyping</h3>
+                                <p class="content__text">
+                                    Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum,
+                                    neque sem pretium metus, quis mollis nisl nunc et massa.
+                                </p>
+                                <p class="content__text">
+                                    Vestibulum sed metus in lorem tristique ullamcorper id vitae erat. Nulla mollis sapien
+                                    sollicitudin lacinia lacinia. Nam dapibus nisl vitae elit fringilla rutrum. Aenean
+                                    sollicitudin, erat a elementum rutrum, neque sem pretium metus, quis mollis nisl nunc et massa
+                                </p>
                             </div>
-                            <div class="content__column">
-                                <div class="content__image">
-                                    <img src="@img/content/02.svg" alt="" />
-                                </div>
+                            <div class="content__image">
+                                <img src="@img/content/02.svg" alt="02" />
                             </div>
                         </div>
-                        <div class="content__row content__row_third">
-                            <div class="content__column">
-                                <div class="content__info">
-                                    <div class="content__title title">Idea Generation & Foundation</div>
-                                    <div class="content__text">
-                                        <p>
-                                            Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum
-                                            rutrum, neque sem pretium metus, quis mollis nisl nunc et massa. Nam dapibus nisl
-                                            vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum, neque sem
-                                            pretium metus, quis mollis nisl nunc et massa
-                                        </p>
-                                    </div>
-                                </div>
+                        <div class="content__row content__row_3">
+                            <div class="content__info">
+                                <h3 class="content__title title">Idea Generation & Foundation</h3>
+                                <p class="content__text">
+                                    Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum,
+                                    neque sem pretium metus, quis mollis nisl nunc et massa. Nam dapibus nisl vitae elit fringilla
+                                    rutrum. Aenean sollicitudin, erat a elementum rutrum, neque sem pretium metus, quis mollis
+                                    nisl nunc et massa
+                                </p>
                             </div>
-                            <div class="content__column">
-                                <div class="content__image">
-                                    <img src="@img/content/03.svg" alt="" />
-                                </div>
+                            <div class="content__image">
+                                <img src="@img/content/03.svg" alt="03" />
                             </div>
                         </div>
                     </div>
                 </section>
+
                 <section class="page__testimonial testimonial">
                     <div class="testimonial__content">
                         <div class="testimonial__container">
