Pet project done v3

--- a/src/home.html
+++ b/src/home.html
@@ -166,70 +166,62 @@
                 </section>
 
                 <section class="page__testimonial testimonial">
-                    <div class="testimonial__content">
-                        <div class="testimonial__container">
-                            <div class="testimonial__title title">Don’t Just Take Our Words</div>
-                            <div class="testimonial__row">
-                                <div class="testimonial__column column-testimonial">
-                                    <div class="column-testimonial__body">
-                                        <div class="column-testimonial__top">
-                                            <div class="column-testimonial__avatar column-testimonial__avatar_center-ibg">
-                                                <img src="@img/avatar/01.png" alt="" />
-                                            </div>
-                                            <div class="column-testimonial__info">
-                                                <div class="column-testimonial__name">Arakat Bank</div>
-                                                <div class="column-testimonial__company">International Bank Ltd.</div>
-                                            </div>
-                                        </div>
-                                        <div class="column-testimonial__text">
-                                            <span>“</span>
-                                            Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend
-                                            lacus, vitae ullamcorper metus. Sed sollicitudin ipsum.
-                                        </div>
+                    <div class="testimonial__container">
+                        <h2 class="testimonial__title title">Don’t Just Take Our Words</h2>
+                        <div class="testimonial__row">
+                            <article class="testimonial__body body-testimonial">
+                                <div class="body-testimonial__top">
+                                    <div class="body-testimonial__avatar-ibg">
+                                        <img src="@img/avatar/01.png" alt="Arakat Bank" />
+                                    </div>
+                                    <div class="body-testimonial__info">
+                                        <div class="body-testimonial__name">Arakat Bank</div>
+                                        <div class="body-testimonial__company">International Bank Ltd.</div>
                                     </div>
                                 </div>
-                                <div class="testimonial__column column-testimonial">
-                                    <div class="column-testimonial__body">
-                                        <div class="column-testimonial__top">
-                                            <div class="column-testimonial__avatar-ibg">
-                                                <img src="@img/avatar/02.png" alt="" />
-                                            </div>
-                                            <div class="column-testimonial__info">
-                                                <div class="column-testimonial__name">Chrsitopher Company Ltd.</div>
-                                                <div class="column-testimonial__company">Design & Development</div>
-                                            </div>
-                                        </div>
-                                        <div class="column-testimonial__text">
-                                            <span>“</span>
-                                            Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend
-                                            lacus, vitae ullamcorper metus. Sed sollicitudin ipsum. Sed sollicitudin ipsum.Sed
-                                            sollicitudin ipsum.
-                                        </div>
+                                <p class="body-testimonial__text">
+                                    <span>“</span>
+                                    Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacus,
+                                    vitae ullamcorper metus. Sed sollicitudin ipsum.
+                                </p>
+                            </article>
+                            <article class="testimonial__body body-testimonial">
+                                <div class="body-testimonial__top">
+                                    <div class="body-testimonial__avatar-ibg">
+                                        <img src="@img/avatar/02.png" alt="Chrsitopher Company Ltd." />
+                                    </div>
+                                    <div class="body-testimonial__info">
+                                        <div class="body-testimonial__name">Chrsitopher Company Ltd.</div>
+                                        <div class="body-testimonial__company">Design & Development</div>
                                     </div>
                                 </div>
-                                <div class="testimonial__column column-testimonial">
-                                    <div class="column-testimonial__body">
-                                        <div class="column-testimonial__top">
-                                            <div class="column-testimonial__avatar-ibg">
-                                                <img src="@img/avatar/03.png" alt="" />
-                                            </div>
-                                            <div class="column-testimonial__info">
-                                                <div class="column-testimonial__name">Jigsawlab Studio Inc.</div>
-                                                <div class="column-testimonial__company">Interactive</div>
-                                            </div>
-                                        </div>
-                                        <div class="column-testimonial__text">
-                                            <span>“</span>
-                                            Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. lacus, vitae ullamcorper
-                                            metus. Sed sollicitudin ipsum.
-                                        </div>
+                                <p class="body-testimonial__text">
+                                    <span>“</span>
+                                    Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacus,
+                                    vitae ullamcorper metus. Sed sollicitudin ipsum. Sed sollicitudin ipsum.Sed sollicitudin
+                                    ipsum.
+                                </p>
+                            </article>
+                            <article class="testimonial__body body-testimonial">
+                                <div class="body-testimonial__top">
+                                    <div class="body-testimonial__avatar-ibg">
+                                        <img src="@img/avatar/03.png" alt="Jigsawlab Studio Inc." />
+                                    </div>
+                                    <div class="body-testimonial__info">
+                                        <div class="body-testimonial__name">Jigsawlab Studio Inc.</div>
+                                        <div class="body-testimonial__company">Interactive</div>
                                     </div>
                                 </div>
-                            </div>
+                                <p class="body-testimonial__text">
+                                    <span>“</span>
+                                    Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. lacus, vitae ullamcorper metus.
+                                    Sed sollicitudin ipsum.
+                                </p>
+                            </article>
                         </div>
-                        <div class="testimonial__bg-ibg">
-                            <img src="@img/bg02.jpg" alt="" />
-                        </div>
+                    </div>
+                    <div class="testimonial__bg-ibg">
+                        <img src="@img/bg02.jpg" alt="background" />
                     </div>
                 </section>
             </main>
